# sic-scaling

./: .gitignore  README.md  pyproject.toml
examples/: 0_ground_state.py  1_calculate_scaling_integrals.py  2_ground_state_sic.py  3_excited_state.py  4_excited_state_sic.py
sic_scaling/: __init__.py  calculate_scaling_integrals.py  helpers.py  radial_distribution.py  utils.py
