[tool.poetry]
name = "sic-scaling"
version = "0.1.0"
description = ""
authors = ["ivan <imtambovtcev@gmail.com>"]
readme = "README.md"
packages = [{include = "sic_scaling"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
